# BugsLife

./: CMakeLists.txt  bugs.txt  main.cpp
classes/: Board.cpp  Board.h  Bug.cpp  Bug.h  Crawler.cpp  Crawler.h  Drifter.cpp  Drifter.h  Hopper.cpp  Hopper.h
